@@ -47,6 +47,10 @@ Bug fixes since 1.2
     The methods have been changed to preserve the time zone.
    The similarly named methods on Instant have not changed behaviour.
 
+- Interval/MutableInterval.overlaps(ReadableInterval)
+  Previously, this method didn't handle empty intervals correctly
+  Now, an empty interval at the start of a larger interval does overlap
+
 - DateTimeFormatterBuilder.MatchingParser
   Previously didn't estimate parsed length correctly
 
